--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@ html {
     14px/1.6 Manrope,
     sans-serif;
   color: #333;
+  overflow-y: scroll;
 }
 
 body,
@@ -26,6 +27,7 @@ button {
 
 body {
   background: #fafafa;
+  overflow-x: hidden;
 }
 
 body:has(.spinner-overlay) {
